--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\inffe\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "E:\\uab\\LP\\elpaiton\\laserpiente\\python.exe"
 }
