--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "E:\\uab\\LP\\elpaiton\\laserpiente\\python.exe"
+    "python.pythonPath": ".venv\\Scripts\\python.exe"
 }
