--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-
-    "python.pythonPath": "C:\\Users\\inffe\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
-
+    "python.pythonPath": ".venv\\Scripts\\python.exe"
 }
