--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 
 {
-    "python.pythonPath": ".venv\\Scripts\\python.exe"
-
-{
-    "python.pythonPath": ".venv\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\cuent\\anaconda3\\python.exe"
 
 }
+ 
