test mock confirmar vuelos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 
 {
-    "python.pythonPath": "E:\\uab\\LP\\elpaiton\\laserpiente\\python.exe"
+    "python.pythonPath": "C:\\Users\\cuent\\anaconda3\\python.exe"
 
 }
  
