--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 
 {
-    "python.pythonPath": "C:\\Users\\mohaas\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "E:\\uab\\LP\\elpaiton\\laserpiente\\python.exe"
 }
  
