--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,8 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": 
+    [
         {
             "name": "Python: Current File",
             "type": "python",
@@ -13,5 +14,5 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}",
             },
-        }
+        },
     ]
