--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 
 {
-    "python.pythonPath": "E:\\uab\\LP\\elpaiton\\laserpiente\\python.exe"
+    "python.pythonPath": "C:\\Users\\cuent\\anaconda3\\python.exe"
 }
  
