--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 
 {
-    "python.pythonPath": "C:\\Users\\mohaas\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\cuent\\anaconda3\\python.exe"
 }
  
